[tool.poetry]
name = "maze-navigation-astar"
version = "0.1.0"
description = ""
authors = ["Oleksandr Zakotianskyi <ozakotianskyi@pixsystem.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

